# cysec-arsenal

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
c/: Makefile
c/bof_demo/: bof_demo.c
c/fmt_string/: fmt_string.c
c/heap_demo/: heap_demo.c
c/hexdump/: hexdump.c
c/shellcode_runner/: shellcode_runner.c
crypto/: cipher_tools.py  hash_identifier.py
ctf/: template_pwn.py  template_web.py
ctf/templates/: template_crypto.py  template_forensics.py  template_pwn.py  template_web.py
ctf/writeups/: README.md
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: cheatsheet.md  methodology.md  resources.md
forensics/: file_carver.py  metadata_extractor.py
network/: arp_anomaly_detector.py  packet_sniffer.py
pwn/: rop_helper.py  shellcode_encoder.py
python/: decode_all.py  hash_id.py
recon/: osint_harvester.py  port_scanner.py  subdomain_enum.py
rust/arsenal-core/: Cargo.toml
rust/arsenal-core/src/: banner.rs  colors.rs  lib.rs  logger.rs
rust/cipher-tools/: Cargo.toml
rust/cipher-tools/src/: main.rs
rust/dir-buster/: Cargo.toml
rust/dir-buster/src/: main.rs
rust/file-carver/: Cargo.toml
rust/file-carver/src/: main.rs
rust/hash-cracker/: Cargo.toml
rust/hash-cracker/src/: main.rs
rust/lfi-probe/: Cargo.toml
rust/lfi-probe/src/: main.rs
rust/net-monitor/: Cargo.toml
rust/net-monitor/src/: main.rs
rust/osint-harvest/: Cargo.toml
rust/osint-harvest/src/: main.rs
rust/port-scanner/: Cargo.toml
rust/port-scanner/src/: main.rs
rust/rop-analyzer/: Cargo.toml
rust/rop-analyzer/src/: main.rs
rust/sqli-probe/: Cargo.toml
rust/sqli-probe/src/: main.rs
rust/subdomain-enum/: Cargo.toml
rust/subdomain-enum/src/: main.rs
rust/web-fuzzer/: Cargo.toml
rust/web-fuzzer/src/: main.rs
rust/xss-probe/: Cargo.toml
rust/xss-probe/src/: main.rs
scripts/: build-all.sh  ctf-init.sh  enum-smb.sh  enum-web.sh  osint-domain.sh  port-knock.sh  privesc-check.sh  recon-pipeline.sh  requirements.txt  revshell-ref.sh  scan-full.sh  setup.sh  web-tech-detect.sh  wordlist-fetch.sh
tests/: test_crypto.py  test_recon.py
utils/: __init__.py  banner.py  colors.py  logger.py
web/: lfi_checker.py  sqli_tester.py  xss_scanner.py
