[package]
name        = "cipher-tools"
description = "Classic cipher encode/decode and auto-detection for CTF crypto"
workspace   = "../.."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cipher"
path = "src/main.rs"

[dependencies]
arsenal-core      = { path = "../arsenal-core" }
clap.workspace    = true
colored.workspace = true
anyhow.workspace  = true
base64.workspace  = true
