[package]
name        = "hash-cracker"
description = "Multi-algorithm hash identifier and dictionary cracker"
workspace   = "../.."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "hcrack"
path = "src/main.rs"

[dependencies]
arsenal-core     = { path = "../arsenal-core" }
clap.workspace   = true
colored.workspace = true
anyhow.workspace = true
hex.workspace    = true
rayon.workspace  = true
md-5.workspace   = true
sha1.workspace   = true
sha2.workspace   = true
sha3.workspace   = true
serde.workspace  = true
serde_json.workspace = true
