[package]
name        = "lfi-probe"
description = "LFI/path traversal detection with signature confirmation"
workspace   = "../.."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lfiprobe"
path = "src/main.rs"

[dependencies]
arsenal-core      = { path = "../arsenal-core" }
tokio.workspace   = true
reqwest.workspace = true
clap.workspace    = true
colored.workspace = true
anyhow.workspace  = true
serde.workspace   = true
serde_json.workspace = true
url.workspace     = true
