[package]
name        = "rop-analyzer"
description = "ELF binary analysis: checksec, ROP gadget search, section dump"
workspace   = "../.."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ropx"
path = "src/main.rs"

[dependencies]
arsenal-core     = { path = "../arsenal-core" }
clap.workspace   = true
colored.workspace = true
anyhow.workspace = true
serde.workspace  = true
serde_json.workspace = true
hex.workspace    = true
