[package]
name        = "sqli-probe"
description = "Error-based, boolean-based, and time-based SQLi detection"
workspace   = "../.."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sqliprobe"
path = "src/main.rs"

[dependencies]
arsenal-core      = { path = "../arsenal-core" }
tokio.workspace   = true
reqwest.workspace = true
clap.workspace    = true
colored.workspace = true
anyhow.workspace  = true
serde.workspace   = true
serde_json.workspace = true
url.workspace     = true
