[package]
name        = "web-fuzzer"
description = "Fast async HTTP parameter/path fuzzer for CTF web challenges"
workspace   = "../.."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "wfuzz"
path = "src/main.rs"

[dependencies]
arsenal-core      = { path = "../arsenal-core" }
tokio.workspace   = true
reqwest.workspace = true
clap.workspace    = true
colored.workspace = true
anyhow.workspace  = true
serde.workspace   = true
serde_json.workspace = true
indicatif.workspace = true
url.workspace     = true
